Add Offer funnel section

--- a/Starbucks_Capstone_notebook.ipynb
+++ b/Starbucks_Capstone_notebook.ipynb
@@ -4,43 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Starbucks Capstone Challenge\n",
-    "\n",
-    "### Introduction\n",
-    "\n",
-    "This data set contains simulated data that mimics customer behavior on the Starbucks rewards mobile app. Once every few days, Starbucks sends out an offer to users of the mobile app. An offer can be merely an advertisement for a drink or an actual offer such as a discount or BOGO (buy one get one free). Some users might not receive any offer during certain weeks. \n",
-    "\n",
-    "Not all users receive the same offer, and that is the challenge to solve with this data set.\n",
-    "\n",
-    "Your task is to combine transaction, demographic and offer data to determine which demographic groups respond best to which offer type. This data set is a simplified version of the real Starbucks app because the underlying simulator only has one product whereas Starbucks actually sells dozens of products.\n",
-    "\n",
-    "Every offer has a validity period before the offer expires. As an example, a BOGO offer might be valid for only 5 days. You'll see in the data set that informational offers have a validity period even though these ads are merely providing information about a product; for example, if an informational offer has 7 days of validity, you can assume the customer is feeling the influence of the offer for 7 days after receiving the advertisement.\n",
-    "\n",
-    "You'll be given transactional data showing user purchases made on the app including the timestamp of purchase and the amount of money spent on a purchase. This transactional data also has a record for each offer that a user receives as well as a record for when a user actually views the offer. There are also records for when a user completes an offer. \n",
-    "\n",
-    "Keep in mind as well that someone using the app might make a purchase through the app without having received an offer or seen an offer.\n",
-    "\n",
-    "### Example\n",
-    "\n",
-    "To give an example, a user could receive a discount offer buy 10 dollars get 2 off on Monday. The offer is valid for 10 days from receipt. If the customer accumulates at least 10 dollars in purchases during the validity period, the customer completes the offer.\n",
-    "\n",
-    "However, there are a few things to watch out for in this data set. Customers do not opt into the offers that they receive; in other words, a user can receive an offer, never actually view the offer, and still complete the offer. For example, a user might receive the \"buy 10 dollars get 2 dollars off offer\", but the user never opens the offer during the 10 day validity period. The customer spends 15 dollars during those ten days. There will be an offer completion record in the data set; however, the customer was not influenced by the offer because the customer never viewed the offer.\n",
-    "\n",
-    "### Cleaning\n",
-    "\n",
-    "This makes data cleaning especially important and tricky.\n",
-    "\n",
-    "You'll also want to take into account that some demographic groups will make purchases even if they don't receive an offer. From a business perspective, if a customer is going to make a 10 dollar purchase without an offer anyway, you wouldn't want to send a buy 10 dollars get 2 dollars off offer. You'll want to try to assess what a certain demographic group will buy when not receiving any offers.\n",
-    "\n",
-    "### Final Advice\n",
-    "\n",
-    "Because this is a capstone project, you are free to analyze the data any way you see fit. For example, you could build a machine learning model that predicts how much someone will spend based on demographics and offer type. Or you could build a model that predicts whether or not someone will respond to an offer. Or, you don't need to build a machine learning model at all. You could develop a set of heuristics that determine what offer you should send to each customer (i.e., 75 percent of women customers who were 35 years old responded to offer A vs 40 percent from the same demographic to offer B, so send offer A)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Data Analysis"
    ]
   },
@@ -53,9 +16,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# import libraries\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmath\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "# import libraries\n",
     "import pandas as pd\n",
@@ -976,7 +951,51 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Offer Funnel\n",
+    "\n",
+    "The expected offer funnel for discount and bogo offers would be as follows:\n",
+    "1. Offer received\n",
+    "2. Offer viewed\n",
+    "3. Transaction\n",
+    "4. Offer completed\n",
+    "\n",
+    "For informational offers, there is no completion stage.\n",
+    "\n",
+    "There will be cases where a offer is recived but never viewed:\n",
+    "1. Offer received\n",
+    "2. Transaction\n",
+    "3. Offer completed\n",
+    "\n",
+    "Additionally, some discount and BOGO offers may never be completed:\n",
+    "1. Offer received\n",
+    "2. Offer viewed\n",
+    "3. Transaction\n",
+    "\n",
+    "Some offers may be opened but not lead to any transactions::\n",
+    "1. Offer received\n",
+    "2. Offer viewed\n",
+    "3. Transaction\n",
+    "\n",
+    "Last, there could be transactions that aren't linked to any offer:\n",
+    "1. Transaction\n",
+    "\n",
+    "For the purpose of this analysis offers will be classified as follows:\n",
+    "* Type I offers: Offers that follow the funnel to completion\n",
+    "* Type II offers: Offers that are received, viewed and led to a transaction, but never completed\n",
+    "* Type III offers: Offers that are received and viewed but have no associated transactions.\n",
+    "* Type IV offers: Offers that are received but never opened"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactions.head(\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
@@ -995,7 +1014,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
