--- a/Starbucks_Capstone_notebook.ipynb
+++ b/Starbucks_Capstone_notebook.ipynb
@@ -16,21 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# import libraries\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmath\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import libraries\n",
     "import pandas as pd\n",
@@ -44,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +248,7 @@
        "9  2906b810c7d4411798c6938adc9daaa5  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +382,7 @@
        "4   None  118  a03223e636434f42ac4c3df47e8bac43          20170804       NaN"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +682,7 @@
        "4  {'offer id': '4d5c57ea9a6940dd891ad53e9dbe8da0'}     0  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -989,12 +977,357 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "transactions.head(\n",
-    ")"
+    "# expland the dictionary in columns\n",
+    "transcript_expand = transcript['value'].apply(pd.Series)\n",
+    "\n",
+    "# add the remaining columns from transcript\n",
+    "transcript_expand = pd.concat([transcript[['person']], transcript[['event']], transcript_expand, transcript[['time']]], axis = 1)\n",
+    "\n",
+    "# offer id and offer_id columns after expanding need to be merged in one\n",
+    "transcript_expand['offer_id'] = transcript_expand[['offer id', 'offer_id']].bfill(axis=1).iloc[:,0]\n",
+    "\n",
+    "# drop offer_id and rename offer id\n",
+    "transcript_expand = transcript_expand.drop(columns=['offer_id'])\n",
+    "transcript_expand = transcript_expand.rename(columns={'offer id' : 'offer_id'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person</th>\n",
+       "      <th>event</th>\n",
+       "      <th>offer_id</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>reward</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>78afa995795e4d85b5d9ceeca43f5fef</td>\n",
+       "      <td>offer received</td>\n",
+       "      <td>9b98b8c7a33c4b65b9aebfe6a799e6d9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a03223e636434f42ac4c3df47e8bac43</td>\n",
+       "      <td>offer received</td>\n",
+       "      <td>0b1e1539f2cc45b7b9fa7c272da2e1d7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>e2127556f4f64592b11af22de27a7932</td>\n",
+       "      <td>offer received</td>\n",
+       "      <td>2906b810c7d4411798c6938adc9daaa5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8ec6ce2a7e7949b1bf142def7d0e0586</td>\n",
+       "      <td>offer received</td>\n",
+       "      <td>fafdcd668e3743c1bb461111dcafc2a4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>68617ca6246f4fbc85e91a2a49552598</td>\n",
+       "      <td>offer received</td>\n",
+       "      <td>4d5c57ea9a6940dd891ad53e9dbe8da0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             person           event  \\\n",
+       "0  78afa995795e4d85b5d9ceeca43f5fef  offer received   \n",
+       "1  a03223e636434f42ac4c3df47e8bac43  offer received   \n",
+       "2  e2127556f4f64592b11af22de27a7932  offer received   \n",
+       "3  8ec6ce2a7e7949b1bf142def7d0e0586  offer received   \n",
+       "4  68617ca6246f4fbc85e91a2a49552598  offer received   \n",
+       "\n",
+       "                           offer_id  amount  reward  time  \n",
+       "0  9b98b8c7a33c4b65b9aebfe6a799e6d9     NaN     NaN     0  \n",
+       "1  0b1e1539f2cc45b7b9fa7c272da2e1d7     NaN     NaN     0  \n",
+       "2  2906b810c7d4411798c6938adc9daaa5     NaN     NaN     0  \n",
+       "3  fafdcd668e3743c1bb461111dcafc2a4     NaN     NaN     0  \n",
+       "4  4d5c57ea9a6940dd891ad53e9dbe8da0     NaN     NaN     0  "
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transcript_expand.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# merge the details of the offers from the portfolio dataframe\n",
+    "\n",
+    "transcript_log = transcript_expand.merge(portfolio, left_on='offer_id', right_on='id', how='left')\n",
+    "transcript_log = transcript_log.drop(columns=['channels', 'offer_id', 'id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person</th>\n",
+       "      <th>event</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>reward_x</th>\n",
+       "      <th>time</th>\n",
+       "      <th>reward_y</th>\n",
+       "      <th>difficulty</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>offer_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>55972</th>\n",
+       "      <td>0009655768c64bdeb2e877511632db8f</td>\n",
+       "      <td>offer received</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>168</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>informational</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77705</th>\n",
+       "      <td>0009655768c64bdeb2e877511632db8f</td>\n",
+       "      <td>offer viewed</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>192</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>informational</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89291</th>\n",
+       "      <td>0009655768c64bdeb2e877511632db8f</td>\n",
+       "      <td>transaction</td>\n",
+       "      <td>22.16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>228</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113605</th>\n",
+       "      <td>0009655768c64bdeb2e877511632db8f</td>\n",
+       "      <td>offer received</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>336</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>informational</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139992</th>\n",
+       "      <td>0009655768c64bdeb2e877511632db8f</td>\n",
+       "      <td>offer viewed</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>372</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>informational</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>258361</th>\n",
+       "      <td>ffff82501cea40309d5fdd7edcca4a07</td>\n",
+       "      <td>transaction</td>\n",
+       "      <td>14.23</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>576</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>258362</th>\n",
+       "      <td>ffff82501cea40309d5fdd7edcca4a07</td>\n",
+       "      <td>offer completed</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>576</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262475</th>\n",
+       "      <td>ffff82501cea40309d5fdd7edcca4a07</td>\n",
+       "      <td>offer viewed</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>582</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>discount</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>274809</th>\n",
+       "      <td>ffff82501cea40309d5fdd7edcca4a07</td>\n",
+       "      <td>transaction</td>\n",
+       "      <td>10.12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>606</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>289924</th>\n",
+       "      <td>ffff82501cea40309d5fdd7edcca4a07</td>\n",
+       "      <td>transaction</td>\n",
+       "      <td>18.91</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>648</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>306534 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  person            event  amount  reward_x  \\\n",
+       "55972   0009655768c64bdeb2e877511632db8f   offer received     NaN       NaN   \n",
+       "77705   0009655768c64bdeb2e877511632db8f     offer viewed     NaN       NaN   \n",
+       "89291   0009655768c64bdeb2e877511632db8f      transaction   22.16       NaN   \n",
+       "113605  0009655768c64bdeb2e877511632db8f   offer received     NaN       NaN   \n",
+       "139992  0009655768c64bdeb2e877511632db8f     offer viewed     NaN       NaN   \n",
+       "...                                  ...              ...     ...       ...   \n",
+       "258361  ffff82501cea40309d5fdd7edcca4a07      transaction   14.23       NaN   \n",
+       "258362  ffff82501cea40309d5fdd7edcca4a07  offer completed     NaN       2.0   \n",
+       "262475  ffff82501cea40309d5fdd7edcca4a07     offer viewed     NaN       NaN   \n",
+       "274809  ffff82501cea40309d5fdd7edcca4a07      transaction   10.12       NaN   \n",
+       "289924  ffff82501cea40309d5fdd7edcca4a07      transaction   18.91       NaN   \n",
+       "\n",
+       "        time  reward_y  difficulty  duration     offer_type  \n",
+       "55972    168       0.0         0.0       3.0  informational  \n",
+       "77705    192       0.0         0.0       3.0  informational  \n",
+       "89291    228       NaN         NaN       NaN            NaN  \n",
+       "113605   336       0.0         0.0       4.0  informational  \n",
+       "139992   372       0.0         0.0       4.0  informational  \n",
+       "...      ...       ...         ...       ...            ...  \n",
+       "258361   576       NaN         NaN       NaN            NaN  \n",
+       "258362   576       NaN         NaN       NaN            NaN  \n",
+       "262475   582       2.0        10.0       7.0       discount  \n",
+       "274809   606       NaN         NaN       NaN            NaN  \n",
+       "289924   648       NaN         NaN       NaN            NaN  \n",
+       "\n",
+       "[306534 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transcript_log.sort_values(by=['person','time'], ascending=True)"
    ]
   }
  ],
@@ -1014,7 +1347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
